# pgvector_db

./: .gitignore  README.md  pyproject.toml
demo/: README.md  aws_rds_demo.py  aws_rds_similarity_search_demo.py  similarity_search_demo.py  test_aws_rds_connection.py  test_db_connection.py  test_real_embeddings.py
notebooks/: pgvector_db.ipynb
src/pgvector_db/: generate_embeddings.py  pg_copy.py  pg_insert.py  utils.py
tests/: test_generate_embeddings.py  test_pg.py  test_utils.py
